--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>iNoteBook - your note secured in cloud</title>
+  
 </head>
 
 <body>
@@ -42,6 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://kit.fontawesome.com/eccfb29777.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
